fix(security): corrigir vulnerabilidades críticas de segurança
- Remover log de tokens JWT em texto plano no SecurityFilter
- Alterar ddl-auto de 'create' para 'validate' em produção
- Remover fallback hardcoded do JWT secret em produção
- Configurar CORS com origens específicas via variável de ambiente
- Adicionar autenticação nos endpoints de escrita de produto
- Não retornar hash da senha no response de criação de cliente
- Mover credenciais do docker-compose para variáveis de ambiente (.env)
- Remover senha pessoal hardcoded do application-dev.properties

Co-Authored-By: Eduardo Andrade dos Santos <game4edu5@gmail.com>